src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: rgb(1, 32, 58);
  --ifm-color-primary-dark: darken(var(--ifm-color-primary), 10%);
  --ifm-color-primary-darker: darken(var(--ifm-color-primary), 20%);
  --ifm-color-primary-darkest: darken(var(--ifm-color-primary), 30%);
  --ifm-color-primary-light: lighten(var(--ifm-color-primary), 10%);
  --ifm-color-primary-lighter: lighten(var(--ifm-color-primary), 20%);
  --ifm-color-primary-lightest: lighten(var(--ifm-color-primary), 30%);
  --ifm-color-secondary: rgb(0, 228, 162);
  --ifm-color-secondary-dark: darken(var(--ifm-color-secondary), 10%);
  --ifm-color-secondary-darker: darken(var(--ifm-color-secondary), 20%);
  --ifm-color-secondary-darkest: darken(var(--ifm-color-secondary), 30%);
  --ifm-color-secondary-light: lighten(var(--ifm-color-secondary), 10%);
  --ifm-color-secondary-lighter: lighten(var(--ifm-color-secondary), 20%);
  --ifm-color-secondary-lightest: lighten(var(--ifm-color-secondary), 30%);
  --ifm-code-font-size: 95%;
}

.navbar__link, .navbar__title {
  --ifm-navbar-link-color: var(--ifm-color-primary);
}

.footer--dark {
  --ifm-footer-background-color: var(--ifm-color-primary);
  --ifm-footer-color: var(--ifm-color-white);
  --ifm-footer-link-color: var(--ifm-color-white);
  --ifm-footer-title-color: var(--ifm-color-white);
}

.footer__link-item:hover {
  --ifm-footer-link-hover-color: var(--ifm-footer-link-color); 
}

.button.button--secondary.button--outline:not(.button--active):not(:hover) {
  color: var(--ifm-color-white);
}

.button.button--secondary.button--outline {
  border-color: var(--ifm-color-white);
}

.button.button--secondary.button--outline:hover {
  background-color: var(--ifm-color-white);
}

.button.button--secondary {
  color: var(--ifm-color-gray-900);
}

.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

/* separate the logo a bit */
.navbar__title {
  margin-left: 20px;
}

.hero__title {
  font-weight: 300;
  font-size: 3rem;
  padding-bottom: 2rem;
}

.hero__subtitle {
  font-size: 1.3rem;
  font-weight: 300;
}

p a, li a {
  text-decoration: underline;
}

